// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alert component 1`] = `
<div
  className="Danger"
>
  Content
</div>
`;

exports[`alert component 2`] = `
<div
  className="Info"
>
  Content
</div>
`;

exports[`alert component 3`] = `
<div
  className="Warning"
>
  Content
</div>
`;

exports[`alert component 4`] = `
<div
  className="Success"
>
  Content
</div>
`;
